--- a/example/index.html
+++ b/example/index.html
@@ -7,10 +7,10 @@
       window.locizify.init({
         debug: true,
         saveMissing: true,
-        saveMissingTo: 'all',
         backend: {
           referenceLng: 'de',
           apiKey: '6947fce1-fa17-42c4-959b-b9bc5913c9ac',
+          loadPath: '614b6c00-a993-4c94-bc9a-e40ee01ed4fe/latest/{{lng}}/{{ns}}',
           addPath: 'https://e6fnb5nbs4.execute-api.eu-west-1.amazonaws.com/dev/missing/614b6c00-a993-4c94-bc9a-e40ee01ed4fe/latest/{{lng}}/{{ns}}',
         }
       });
