allow config on script tag

--- a/example/index.html
+++ b/example/index.html
@@ -2,18 +2,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="/locizify.js"></script>
+    <script id="locizify" projectid="614b6c00-a993-4c94-bc9a-e40ee01ed4fe" apikey="6947fce1-fa17-42c4-959b-b9bc5913c9ac" referencelng="en" fallbacklng="en" savemissing="true" debug="true" src="/locizify.js"></script>
     <script>
-      window.locizify.init({
-        debug: true,
-        saveMissing: true,
-        backend: {
-          referenceLng: 'de',
-          apiKey: '6947fce1-fa17-42c4-959b-b9bc5913c9ac',
-          loadPath: '614b6c00-a993-4c94-bc9a-e40ee01ed4fe/latest/{{lng}}/{{ns}}',
-          addPath: 'https://e6fnb5nbs4.execute-api.eu-west-1.amazonaws.com/dev/missing/614b6c00-a993-4c94-bc9a-e40ee01ed4fe/latest/{{lng}}/{{ns}}',
-        }
-      });
+      // window.locizify.init({
+      //   debug: true,
+      //   saveMissing: true,
+      //   backend: {
+      //     referenceLng: 'de',
+      //     apiKey: '6947fce1-fa17-42c4-959b-b9bc5913c9ac',
+      //     loadPath: '614b6c00-a993-4c94-bc9a-e40ee01ed4fe/latest/{{lng}}/{{ns}}',
+      //     addPath: 'https://e6fnb5nbs4.execute-api.eu-west-1.amazonaws.com/dev/missing/614b6c00-a993-4c94-bc9a-e40ee01ed4fe/latest/{{lng}}/{{ns}}',
+      //   }
+      // });
     </script>
   </head>
   <body class="landing-page" style='display: none'>
