wip getting right element

--- a/example/index.html
+++ b/example/index.html
@@ -38,7 +38,7 @@
     </div>
     <div>
       <ul>
-        <li>Flexible connection to <a href="/docs/ecosystem/#backends">backend</a> (loading translations via xhr, …)</li>
+        <li>Flexible connection to <a href="/docs/ecosystem/#backends">backend</a>work that?<br /> (loading translations via xhr, …)</li>
         <li>Optional <a href="/docs/ecosystem/#caches">caching</a>, user <a href="/docs/ecosystem/#languagedetector">language detection</a>, …</li>
         <li>Proper <a href="/translate/pluralSimple/">pluralizations</a></li>
         <li>Translation <a href="/translate/context/">context</a></li>
