rather good results to get right text on click

--- a/example/index.html
+++ b/example/index.html
@@ -38,8 +38,8 @@
     </div>
     <div>
       <ul>
-        <li>Flexible connection to <a href="/docs/ecosystem/#backends">backend</a>work that?<br /> (loading translations via xhr, …)</li>
-        <li>Optional <a href="/docs/ecosystem/#caches">caching</a>, user <a href="/docs/ecosystem/#languagedetector">language detection</a>, …</li>
+        <li>Flexible connection to <a href="/docs/ecosystem/#backends">backend</a> work that for real whaat if it gets broken into multiple lines?<br /> (loading translations via xhr, …)</li>
+        <li><p style="position: absolute; top: 100px;">Optional</p> <a href="/docs/ecosystem/#caches">caching</a>, user <a href="/docs/ecosystem/#languagedetector">language detection</a>, …</li>
         <li>Proper <a href="/translate/pluralSimple/">pluralizations</a></li>
         <li>Translation <a href="/translate/context/">context</a></li>
         <li><a href="/translate/nesting/">Nesting</a>, <a href="/translate/interpolation/">Variable replacement</a></li>
@@ -47,6 +47,7 @@
         <li>Extensibility: eg. <a href="/docs/ecosystem/#postprocessors">sprintf</a></li>
         <li>…</li>
       </ul>
+      <p style="position: absolute; top: 100px;">Optional</p>
     </div>
     <hr />
     <div>
