--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
         debug: true,
         saveMissing: true,
         namespace: 'translation',
+        appendNamespaceToCIMode: true,
         // namespaceFromPath: true,
         ns: ['common', 'commonNested'],
         ignoreIds: ['ignoreMeId'],
