enable configuration of all options in script attributes

--- a/example/index.html
+++ b/example/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <!-- <script id="locizify" debug="true" ignoretags="DIV" src="/locizify.js"></script> -->
   <script src="/locizify.js"></script>
   <script>
     var translation = window.locizify.init({
