update i18next deps

--- a/example/index.html
+++ b/example/index.html
@@ -24,7 +24,7 @@
           addPath:
             'https://api-dev.locize.io/missing/{{projectId}}/latest/{{lng}}/{{ns}}',
           autoPilot: true,
-          whitelistThreshold: 0.2
+          translatedPercentageThreshold: 0.2
         },
         editor: {
           defaultNS: 'translation',
