--- a/example/index.html
+++ b/example/index.html
@@ -18,11 +18,11 @@
           apiKey: '9b65a701-efef-40df-b073-4fb393eaa2cd',
           projectId: '3a3b18b9-d459-4c50-be29-d59f03d969e5',
           // version: 'staging',
-          getLanguagesPath: 'https://api-dev.locize.io/languages/{{projectId}}',
+          getLanguagesPath: 'https://api-dev.locize.app/languages/{{projectId}}',
           loadPath:
-            'https://api-dev.locize.io/{{projectId}}/latest/{{lng}}/{{ns}}',
+            'https://api-dev.locize.app/{{projectId}}/latest/{{lng}}/{{ns}}',
           addPath:
-            'https://api-dev.locize.io/missing/{{projectId}}/latest/{{lng}}/{{ns}}',
+            'https://api-dev.locize.app/missing/{{projectId}}/latest/{{lng}}/{{ns}}',
           autoPilot: true,
           translatedPercentageThreshold: 0.2
         },
@@ -30,9 +30,9 @@
           defaultNS: 'translation',
           referenceLng: 'en',
           projectId: '3a3b18b9-d459-4c50-be29-d59f03d969e5',
-          enabled: true,
-          enableByQS: true,
-          url: 'https://dev.locize.io' //'http://localhost:8080/editor' //
+          enabled: false,
+          enableByQS: 'locize',
+          url: 'https://dev.locize.app' //'http://localhost:8080/editor' //
           // onEditorSaved: function (lng, ns) { location.reload(); }
         }
       });
