--- a/example/index.html
+++ b/example/index.html
@@ -28,6 +28,9 @@
           // translatedPercentageThreshold: 0.2
         },
       });
+      document.addEventListener("DOMContentLoaded", function(event) {
+        window.locizify.editor.showLocizeLink();
+      });
       // setTimeout(function () {
       //   translation.start();
       // }, 4000);
