optimize autopilot handling

--- a/example/landing/index.html
+++ b/example/landing/index.html
@@ -227,8 +227,8 @@
     <script
       id="locizify"
       projectid="21967a81-066c-4587-a643-480abf418194"
-      fallbacklng="en"
-      src="https://unpkg.com/locizify@^5.3.0"
+      src="https://unpkg.com/locizify@^5.3.1"
+      autopilot
     ></script>
   </body>
 </html>
