major update of locize plugin

--- a/example/simple/index.html
+++ b/example/simple/index.html
@@ -30,7 +30,7 @@
         },
       });
       document.addEventListener('DOMContentLoaded', function (event) {
-        window.locizify.editor.showLocizeLink();
+        // window.locizify.editor.showLocizeLink();
       });
       // setTimeout(function () {
       //   translation.start();
